Cleanup of fairness work for transfers